// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FileCollection createFileMetadata should call the right route 1`] = `
Array [
  "POST",
  "/files/upload/metadata",
  Object {
    "data": Object {
      "attributes": Object {
        "type": "bill",
      },
      "type": "io.cozy.files.metadata",
    },
  },
]
`;

exports[`FileCollection findReferencedBy should pass all the filters 1`] = `
[MockFunction] {
  "calls": Array [
    Array [
      "GET",
      "/data/io.cozy.files/123/relationships/references?include=files&sort=datetime",
    ],
  ],
  "results": Array [
    Object {
      "isThrow": false,
      "value": Object {
        "data": Array [],
        "meta": Object {},
      },
    },
  ],
}
`;

exports[`FileCollection referencedBy should add a reference 1`] = `
[MockFunction] {
  "calls": Array [
    Array [
      "POST",
      "/files/123/relationships/referenced_by",
      Object {
        "data": Array [
          Object {
            "id": "456",
            "type": "io.cozy.photos.albums",
          },
        ],
      },
    ],
  ],
  "results": Array [
    Object {
      "isThrow": false,
      "value": undefined,
    },
  ],
}
`;

exports[`FileCollection referencedBy should remove a reference 1`] = `
[MockFunction] {
  "calls": Array [
    Array [
      "DELETE",
      "/files/123/relationships/referenced_by",
      Object {
        "data": Array [
          Object {
            "id": "456",
            "type": "io.cozy.photos.albums",
          },
        ],
      },
    ],
  ],
  "results": Array [
    Object {
      "isThrow": false,
      "value": undefined,
    },
  ],
}
`;

exports[`FileCollection updateAttributes should call the right route 1`] = `
Array [
  "PATCH",
  "/files/42",
  Object {
    "data": Object {
      "attributes": Object {
        "dir_id": "123",
      },
      "id": "42",
      "type": "io.cozy.files",
    },
  },
]
`;

exports[`FileCollection updateMetadataAttribute should call the right route 1`] = `
Array [
  "POST",
  "/files/42/versions",
  Object {
    "data": Object {
      "attributes": Object {
        "classification": "tax_notice",
      },
      "type": "io.cozy.files.metadata",
    },
  },
]
`;
